# chemical-formula-rs

./: 2  @  ACKNOWLEDGEMENT.md  CHANGELOG.md  CI.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT.md  Cargo.toml  README.md  SECURITY.md  ]
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  custom_issue.md
.github/workflows/: audit_on_push.yml  ci.yml  update_labels.yml
src/: element.rs  formula.pest  input.txt  lib.rs  main.rs  parser.rs  prelude.rs
